# AerolithDB

./: ADVANCED_TESTING_DEMONSTRATION_SUMMARY.md  ANALYSIS_AND_DOCUMENTATION_UPDATE_SUMMARY.md  BATTLE_TEST_RESULTS.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS_AND_FIXES.md  COMPREHENSIVE_MULTINODE_TEST_GUIDE.md  CROSS_DATACENTER_REPLICATION.md  CROSS_PLATFORM_COMPATIBILITY_REPORT.md  CURRENT_IMPLEMENTATION_STATUS.md  Cargo.toml  DISTRIBUTED_NETWORK_COMPLETION.md  FINAL_COMPLETION_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  MULTINODE_IMPLEMENTATION_COMPLETE.md  MULTINODE_QUICK_REFERENCE.md  MULTINODE_TEST_INTEGRATION_COMPLETION.md  NETWORK_SCRIPTS_SUMMARY.md  OPTIONAL_ENHANCEMENTS_STATUS.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_INVESTIGATION_SUMMARY.md  PRODUCTION_READINESS_FINAL_STATUS.md  PROJECT_COMPLETION_STATUS.md  README.md  RENAMING_INSTRUCTIONS.md  TUI_IMPLEMENTATION_SUMMARY.md  WEB_UI_INTEGRATION_COMPLETION.md  WEB_UI_INTEGRATION_FINAL_STATUS.md  WEB_UI_INTEGRATION_STATUS.md  architecture.md  benchmark.rs  config.json  launch-network.ps1  launch-network.sh  minimal-test.rs  practical_example.rs  rename-aerolith.ps1  rename-directories.ps1  run-battle-test.ps1  status-simple.ps1  (+5 more)
aerolithdb-api/: Cargo.toml  build.rs
aerolithdb-api/src/: graphql.rs  grpc.rs  grpc_v2.rs  lib.rs  middleware.rs  payment.rs  rest.rs  saas.rs  saas.rs.disabled  websocket.rs
aerolithdb-api/src/proto/: datisdb.v1.rs  mod.rs
aerolithdb-api/static/: playground.html
aerolithdb-cache/: Cargo.toml
aerolithdb-cache/src/: lib.rs
aerolithdb-cli/: Cargo.toml
aerolithdb-cli/src/: analytics.rs  args.rs  batch.rs  client.rs  commands.rs  config.rs  crypto_wallet.rs  document.rs  integration_tests.rs  main.rs  main_tui_test.rs  query.rs  saas.rs  tui_test.rs  utils.rs
aerolithdb-cli/src/commands/: wallet.rs
aerolithdb-cli/src/tui/: app.rs  events.rs  mod.rs  mod_old.rs  ui.rs
aerolithdb-consensus/: Cargo.toml
aerolithdb-consensus/src/: byzantine_tolerance.rs  conflict_resolution.rs  engine.rs  lib.rs  partition_recovery.rs  types.rs  vector_clock.rs
aerolithdb-core/: Cargo.toml
aerolithdb-core/src/: config.rs  lib.rs  node.rs  types.rs
aerolithdb-integration/: Cargo.toml
aerolithdb-integration/src/: lib.rs  saas.rs
aerolithdb-network/: Cargo.toml
aerolithdb-network/src/: lib.rs
aerolithdb-plugins/: Cargo.toml
aerolithdb-plugins/src/: lib.rs  payment.rs
aerolithdb-plugins/src/blockchain/: mod.rs  solana.rs  tron.rs
aerolithdb-query/: Cargo.toml
aerolithdb-query/src/: config.rs  engine.rs  lib.rs  lib_new.rs  processing.rs  stats.rs  types.rs
aerolithdb-saas/: Cargo.toml
aerolithdb-saas/src/: analytics.rs  auth.rs  billing.rs  config.rs  errors.rs  lib.rs  manager.rs  production_metering.rs  provisioning.rs  quotas.rs  sso.rs  subscription.rs  tenant.rs  tenant_isolation.rs  usage.rs  usage_tracker.rs
aerolithdb-security/: Cargo.toml
aerolithdb-security/src/: lib.rs
aerolithdb-storage/: Cargo.toml
aerolithdb-storage/src/: backends.rs  compression.rs  datacenter_replication.rs  lib.rs  replication.rs  sharding.rs
aerolithdb-tenant/: Cargo.toml
aerolithdb-tenant/src/: isolation.rs  lib.rs  organization.rs  quota.rs  user.rs
demo-test/logs/: byzantine_events.jsonl  partition_events.jsonl
demo-test/metrics/: health_monitoring.jsonl  load_test_progress.jsonl
demo-test/reports/: comprehensive_test_report.json  governance_audit.jsonl  load_test_final.json  test_summary.txt
demo-test/workflows/: cms_workflow.jsonl  ecommerce_workflow.jsonl  financial_workflow.jsonl
docs/: ANALYSIS_SUMMARY.md  CRYPTO_WALLET_IMPLEMENTATION_STATUS.md  CRYPTO_WALLET_INTEGRATION_PLAN.md  DBAAS_READINESS_ANALYSIS.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  PRODUCTION_DEPLOYMENT.md  README.md  SAAS_ADVANCED_INTEGRATION_STATUS.md  SAAS_ANALYSIS_AND_STATUS.md  SAAS_FINAL_PRODUCTION_STATUS.md  SAAS_IMPLEMENTATION_PLAN.md  SAAS_IMPROVEMENT_PLAN.md  STRATEGIC_IMPROVEMENT_PLAN.md  WEB_CLIENT_DESIGN.md  WEB_UI_ENHANCEMENT_PLAN.md  WEB_UI_IMPLEMENTATION_PLAN.md
examples/: grpc_protobuf_client.rs
proto/: aerolithdb.proto
scripts/: README.md  advanced-network-test.ps1  advanced-network-test.sh  demo-advanced-test.ps1  launch-local-network-fixed.ps1  launch-local-network.ps1  launch-local-network.sh  launch-network-with-ui.ps1  launch-network-with-ui.sh  quick-demo.ps1  quick-demo.sh  test-integration-readiness.ps1
src/: main.rs
test_data/cold/distributed_storage/: db
test_data/warm/ssd_cache/: db
tests/: minimal_battle_test.rs  multinode_test_validation.rs  network_battle_test.rs  saas_integration_test.rs  simple_network_test.rs
web-client/: index.html  package.json  tsconfig.json  vite.config.ts
web-client/src/: App.tsx  index.css  main.tsx
web-client/src/components/layout/: AppHeader.tsx  AppSidebar.tsx
web-client/src/components/payment/: PaymentDashboard.tsx
web-client/src/components/wallet/: WalletConnector.tsx
web-client/src/pages/: Administration.tsx  Analytics.tsx  Dashboard.tsx  DataBrowser.tsx  NetworkExplorer.tsx  NotFound.tsx  PaymentCenter.tsx  QueryInterface.tsx  RealtimeMonitor.tsx
web-client/src/services/: ApiClient.ts  PaymentService.ts  WebSocketManager.ts
web-client/src/types/: index.ts
