[package]
name = "aerolithdb"
version = "0.1.0"
edition = "2021"
authors = ["AerolithDB Team"]
description = "A production-ready distributed NoSQL JSON document database with zero-knowledge privacy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aerolithdb/aerolithdb"

[workspace]
members = [
    "aerolithdb-core",
    "aerolithdb-consensus",
    "aerolithdb-storage",
    "aerolithdb-network",
    "aerolithdb-cache",
    "aerolithdb-security",
    "aerolithdb-query",
    "aerolithdb-api",
    "aerolithdb-plugins",
    "aerolithdb-cli"
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Networking
libp2p = { version = "0.53", features = ["kad", "noise", "yamux", "tcp", "quic", "gossipsub", "identify", "ping"] }
quinn = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Cryptography
dryoc = "0.5"
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
blake3 = "1.5"

# Storage
sled = "0.34"
# rocksdb = "0.21" # Temporarily disabled due to zstd-sys build issues

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base58 = "0.2"
dashmap = "5.5"
parking_lot = "0.12"

# Web APIs
axum = "0.7"
tonic = "0.10"
async-graphql = "6.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"
criterion = "0.5"

[dependencies]
aerolithdb-core = { path = "aerolithdb-core" }
aerolithdb-consensus = { path = "aerolithdb-consensus" }
aerolithdb-storage = { path = "aerolithdb-storage" }
aerolithdb-network = { path = "aerolithdb-network" }
aerolithdb-cache = { path = "aerolithdb-cache" }
aerolithdb-security = { path = "aerolithdb-security" }
aerolithdb-query = { path = "aerolithdb-query" }
aerolithdb-api = { path = "aerolithdb-api" }
aerolithdb-plugins = { path = "aerolithdb-plugins" }
aerolithdb-cli = { path = "aerolithdb-cli" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bin]]
name = "aerolithdb"
path = "src/main.rs"

[[bin]]
name = "test-storage-integration"
path = "test-storage-integration.rs"

[[bin]]
name = "minimal-test"
path = "minimal-test.rs"
