[package]
name = "aerolithdb-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["protobuf"]
protobuf = []

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
# async-graphql = "6.0"
# async-graphql-axum = "6.0"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

aerolithdb-query = { path = "../aerolithdb-query" }
aerolithdb-security = { path = "../aerolithdb-security" }

[build-dependencies]
tonic-build = "0.11"
