[package]
name = "aerolithdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
futures = "0.3"
flate2 = "1.0"

aerolithdb-core = { path = "../aerolithdb-core" }
