[package]
name = "aerolithdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
futures = "0.3"
flate2 = "1.0"

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
tokio-util = "0.7"
tui-input = "0.10"
rand = "0.8"

# Additional UI utilities
tui-logger = "0.13"
unicode-width = "0.1"

aerolithdb-core = { path = "../aerolithdb-core" }
