[package]
name = "aerolithdb-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }

aerolithdb-security = { path = "../aerolithdb-security" }
aerolithdb-storage = { path = "../aerolithdb-storage" }
