[package]
name = "aerolithdb-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }

aerolithdb-security = { path = "../aerolithdb-security" }
aerolithdb-consensus = { path = "../aerolithdb-consensus" }
