[package]
name = "aerolithdb-query"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

aerolithdb-storage = { path = "../aerolithdb-storage" }
aerolithdb-cache = { path = "../aerolithdb-cache" }
aerolithdb-security = { path = "../aerolithdb-security" }
